# tauri-robot-control

./: .gitignore  README.md  index.html  package.json  start.bat
esp32/: Cargo.toml  README.md  build.bat  build.ps1  build.rs
esp32/.cargo/: config.toml
esp32/arduino/robot_car/: robot_car.ino
esp32/esp-robot/: Cargo.toml  build.bat  flash.bat
esp32/esp-robot-idf/: Cargo.toml  INSTALL.md
esp32/esp-robot-idf/.cargo/: config.toml
esp32/esp-robot-idf/src/: main.rs
esp32/robot_car/: robot_car.ino
esp32/src/: main.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
